# SpotifyVisualizer

./: .gitignore  Cargo.toml
backend/src/: main.rs
backend/src/api/: spotify_info.rs
backend/src/constants/: mod.rs
backend/src/model/: spotify_info.rs
frontend/spotify-visualizer/: .gitignore  package-lock.json  package.json
frontend/spotify-visualizer/src/: App.js
frontend/spotify-visualizer/src/components/: search-bar.js
frontend/spotify-visualizer/src/components/search-bar/: search-bar.js
frontend/spotify-visualizer/src/components/search-result/: search-result.js
frontend/spotify-visualizer/src/model/: SpotifyInfo.js
frontend/spotify-visualizer/src/services/: spotify-service.js
src/: main.rs
src/api/: spotify_info.rs
