[package]
name = "SpotifyVisualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "^4"
uuid = { version = "^0.8", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.8"
log = "^0.4"
strum_macros = "^0.24"
strum = { version = "0.24", features = ["derive"] }